[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/EnemyChaseB.gd" type="Script" id=1]
[ext_resource path="res://Assests/Enemies/enemy_chase/enemy_chase_hands.png" type="Texture" id=2]
[ext_resource path="res://Assests/Enemies/enemy_chase/enemy_chase_body.png" type="Texture" id=3]
[ext_resource path="res://Assests/Enemies/enemy_chase/enemy_chase_legs.png" type="Texture" id=4]
[ext_resource path="res://Assests/Enemies/enemy_chase/enemy_chase_hands-2.png" type="Texture" id=5]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Legs:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Legs:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 31.5, 34 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="Animation" id=9]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.760784, 0.160784, 0.109804, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=11]
radius = 172.012

[node name="EnemyChase" type="Area2D" groups=["enemy", "enemyChase", "enemyRun"]]
collision_layer = 132
collision_mask = 131
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprites/Body")
autoplay = "Run"
anims/RESET = SubResource( 6 )
anims/Run = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemyChase"]]
position = Vector2( -0.5, -34 )
shape = SubResource( 5 )

[node name="Sprites" type="Node2D" parent="."]
position = Vector2( 0, -68 )

[node name="Legs" type="Sprite" parent="Sprites"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="Body" type="Sprite" parent="Sprites"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="Hand" type="AnimatedSprite" parent="."]
position = Vector2( 0, -68 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 8 )
frame = 1

[node name="ImpactAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2, -57 )
shape = SubResource( 11 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="." to="." method="_on_enemy2_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_enemy2_area_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
